added module to do analytics

--- a/model_exploration/Exploring Models.ipynb
+++ b/model_exploration/Exploring Models.ipynb
@@ -9,8 +9,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -28,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +192,7 @@
        "4             1.000         real  "
       ]
      },
-     "execution_count": 68,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -214,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -233,11 +235,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.linear_model import LogisticRegressionCV\n",
     "from sklearn.cross_validation import train_test_split\n",
     "from sklearn import metrics\n",
     "from sklearn.cross_validation import cross_val_score\n",
@@ -246,18 +248,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "model = LogisticRegression()"
+    "model = LogisticRegressionCV()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -272,13 +272,13 @@
     {
      "data": {
       "text/plain": [
-       "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
-       "          intercept_scaling=1, max_iter=100, multi_class='ovr', n_jobs=1,\n",
-       "          penalty='l2', random_state=None, solver='liblinear', tol=0.0001,\n",
-       "          verbose=0, warm_start=False)"
+       "LogisticRegressionCV(Cs=10, class_weight=None, cv=None, dual=False,\n",
+       "           fit_intercept=True, intercept_scaling=1.0, max_iter=100,\n",
+       "           multi_class='ovr', n_jobs=1, penalty='l2', random_state=None,\n",
+       "           refit=True, scoring=None, solver='lbfgs', tol=0.0001, verbose=0)"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,16 +297,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.57999999999999996"
+       "0.60866666666666669"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,16 +317,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.5093333333333333"
+       "0.49733333333333335"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -369,48 +369,48 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Intercept</td>\n",
-       "      <td>[-0.119705960656]</td>\n",
+       "      <td>[-0.0359185849231]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>typo_counts</td>\n",
-       "      <td>[1.07791605659]</td>\n",
+       "      <td>[0.857434213467]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>text_subjectivity</td>\n",
-       "      <td>[1.02779136752]</td>\n",
+       "      <td>[1.75557033891]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>text_positivity</td>\n",
-       "      <td>[-0.78790409251]</td>\n",
+       "      <td>[-6.0666857089]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>text_negativity</td>\n",
-       "      <td>[2.53935725209]</td>\n",
+       "      <td>[10.4984992032]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>title_neutrality</td>\n",
-       "      <td>[0.0120311224572]</td>\n",
+       "      <td>[-0.12420517124]</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                   0                  1\n",
-       "0          Intercept  [-0.119705960656]\n",
-       "1        typo_counts    [1.07791605659]\n",
-       "2  text_subjectivity    [1.02779136752]\n",
-       "3    text_positivity   [-0.78790409251]\n",
-       "4    text_negativity    [2.53935725209]\n",
-       "5   title_neutrality  [0.0120311224572]"
+       "                   0                   1\n",
+       "0          Intercept  [-0.0359185849231]\n",
+       "1        typo_counts    [0.857434213467]\n",
+       "2  text_subjectivity     [1.75557033891]\n",
+       "3    text_positivity     [-6.0666857089]\n",
+       "4    text_negativity     [10.4984992032]\n",
+       "5   title_neutrality    [-0.12420517124]"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -437,30 +437,21 @@
    ],
    "source": [
     "y_test, X_test = dmatrices('label ~ typo_counts + text_subjectivity + text_positivity + text_negativity + title_neutrality',\n",
-    "                  data.iloc[testing_rows], return_type=\"dataframe\")\n",
+    "                  dict(data.iloc[2]), return_type=\"dataframe\")\n",
     "print(X_test.columns)\n",
     "y_test = np.ravel(y_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.5216661   0.4783339 ]\n",
-      " [ 0.53671988  0.46328012]\n",
-      " [ 0.29987135  0.70012865]\n",
-      " [ 0.55390604  0.44609396]\n",
-      " [ 0.52900241  0.47099759]\n",
-      " [ 0.55924301  0.44075699]\n",
-      " [ 0.29987135  0.70012865]\n",
-      " [ 0.52518225  0.47481775]\n",
-      " [ 0.29797374  0.70202626]\n",
-      " [ 0.53639303  0.46360697]]\n"
+      "[[ 0.54760139  0.45239861]]\n"
      ]
     }
    ],
@@ -509,6 +500,37 @@
     "scores = cross_val_score(LogisticRegression(), X, y, scoring='accuracy', cv=10)\n",
     "print( scores)\n",
     "print( scores.mean())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/cynthia.vint/anaconda3/lib/python3.5/site-packages/sklearn/utils/validation.py:395: DeprecationWarning: Passing 1d arrays as data is deprecated in 0.17 and will raise ValueError in 0.19. Reshape your data either using X.reshape(-1, 1) if your data has a single feature or X.reshape(1, -1) if it contains a single sample.\n",
+      "  DeprecationWarning)\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "X has 5 features per sample; expecting 6",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-32-86e7d0e54a96>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0miloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'typo_counts'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'text_subjectivity'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'text_positivity'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'text_negativity'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'title_neutrality'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/anaconda3/lib/python3.5/site-packages/sklearn/linear_model/base.py\u001b[0m in \u001b[0;36mpredict\u001b[0;34m(self, X)\u001b[0m\n\u001b[1;32m    334\u001b[0m             \u001b[0mPredicted\u001b[0m \u001b[0;32mclass\u001b[0m \u001b[0mlabel\u001b[0m \u001b[0mper\u001b[0m \u001b[0msample\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    335\u001b[0m         \"\"\"\n\u001b[0;32m--> 336\u001b[0;31m         \u001b[0mscores\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdecision_function\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    337\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mscores\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    338\u001b[0m             \u001b[0mindices\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mscores\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.5/site-packages/sklearn/linear_model/base.py\u001b[0m in \u001b[0;36mdecision_function\u001b[0;34m(self, X)\u001b[0m\n\u001b[1;32m    315\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mX\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0mn_features\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    316\u001b[0m             raise ValueError(\"X has %d features per sample; expecting %d\"\n\u001b[0;32m--> 317\u001b[0;31m                              % (X.shape[1], n_features))\n\u001b[0m\u001b[1;32m    318\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    319\u001b[0m         scores = safe_sparse_dot(X, self.coef_.T,\n",
+      "\u001b[0;31mValueError\u001b[0m: X has 5 features per sample; expecting 6"
+     ]
+    }
+   ],
+   "source": [
+    "model.predict(data.iloc[2][['typo_counts','text_subjectivity', 'text_positivity', 'text_negativity', 'title_neutrality']])"
    ]
   },
   {
